1.5.0 - 2015-XX-XX
  - General changes/additions
    * augtool: new --timing option that prints after each operation how long
      it took
    * aug_match: fix a bug where expressions like /foo/*[2] would match a
      hidden node and pretend there was no match at all. We now make sure
      we never match a hidden node. Thanks to Xavier Mol for reporting the
      problem.
  - Lens changes/additions
    * AptConf: support hash comments
    * AptSources: support options (Issue #295),
                  support brackets with spaces in URI (GH #296)
                  rename test file to test_aptsources.aug
    * Chrony: allow signed numbers and indentation, fix stray EOL entry,
              disallow comment on EOL, add many missing directives and
              options (Miroslav Lichvar, RHBZ#1213281)
              add new directives and options that were added in
              chrony-2.2 and chrony-2.3 and improve parsing of
              access configuration (Miroslav Lichvar, Issue #348)
              add new options for chrony-2.4 (Miroslav Lichvar)
    * Dhclient: avoid put ambiguity for node without value (Issue #294)
    * Group: support NIS map, support an overridden and disabled password,
             i.e. `+:*::` (Matt Dainty) (Issue #258)
    * Host_Conf: support spaces between list items (Cedric Bosdonnat, Issue #358)
    * Httpd: add paths to SLES vhosts
             (Jan Doleschal) (Issue #268)
             parse backslashes in directive arguments (Issue #307)
             parse mismatching case of opening/closing tags
             parse multiple ending section tags on one line
             parse wordlists in braces in SSLRequire directives
             parse directive args starting with double quote (Issue #330)
             parse directive args containing quotes
             support perl directives (Issue #327)
             parse line breaks/continuations in section arguments
    * Inputrc: support $else (Cedric Bosdonnat, Issue #359)